@@ -28,8 +28,8 @@ import static org.mockito.Mockito.when;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.hash.HashCode;
+import com.radixdlt.atom.Txn;
 import com.radixdlt.consensus.BFTHeader;
-import com.radixdlt.consensus.Command;
 import com.radixdlt.consensus.LedgerHeader;
 import com.radixdlt.consensus.QuorumCertificate;
 import com.radixdlt.consensus.TimestampedECDSASignatures;
@@ -45,7 +45,7 @@ import com.radixdlt.consensus.Sha256Hasher;
 import com.radixdlt.crypto.HashUtils;
 import com.radixdlt.crypto.Hasher;
 import com.radixdlt.environment.EventDispatcher;
-import com.radixdlt.ledger.StateComputerLedger.PreparedCommand;
+import com.radixdlt.ledger.StateComputerLedger.PreparedTxn;
 import com.radixdlt.ledger.StateComputerLedger.StateComputer;
 import com.radixdlt.counters.SystemCounters;
 import com.radixdlt.ledger.StateComputerLedger.StateComputerResult;
@@ -57,6 +57,7 @@ import com.radixdlt.utils.TypedMocks;
 import com.radixdlt.utils.UInt256;
 import java.util.Comparator;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
 import org.junit.Before;
@@ -79,17 +80,12 @@ public class StateComputerLedgerTest {
 	private VerifiedVertex genesisVertex;
 	private QuorumCertificate genesisQC;
 
-	private final Command nextCommand = new Command(new byte[] {0});
+	private final Txn nextTxn = Txn.create(new byte[] {0});
 	private final Hasher hasher = Sha256Hasher.withDefaultSerialization();
-	private final PreparedCommand successfulNextCommand = new PreparedCommand() {
+	private final PreparedTxn successfulNextCommand = new PreparedTxn() {
 		@Override
-		public Command command() {
-			return nextCommand;
-		}
-
-		@Override
-		public HashCode hash() {
-			return hasher.hash(nextCommand);
+		public Txn txn() {
+			return nextTxn;
 		}
 	};
 
@@ -179,7 +175,7 @@ public class StateComputerLedgerTest {
 		genesisIsEndOfEpoch(true);
 		when(stateComputer.prepare(any(), any(), anyLong(), any(), anyLong()))
 			.thenReturn(new StateComputerResult(ImmutableList.of(successfulNextCommand), ImmutableMap.of()));
-		final UnverifiedVertex unverifiedVertex = new UnverifiedVertex(genesisQC, View.of(1), nextCommand);
+		final UnverifiedVertex unverifiedVertex = new UnverifiedVertex(genesisQC, View.of(1), List.of(nextTxn.getPayload()));
 		final VerifiedVertex proposedVertex = new VerifiedVertex(unverifiedVertex, hasher.hash(unverifiedVertex));
 
 		// Act
@@ -200,7 +196,7 @@ public class StateComputerLedgerTest {
 			.thenReturn(new StateComputerResult(ImmutableList.of(successfulNextCommand), ImmutableMap.of()));
 
 		// Act
-		final UnverifiedVertex unverifiedVertex = new UnverifiedVertex(genesisQC, View.of(1), nextCommand);
+		final UnverifiedVertex unverifiedVertex = new UnverifiedVertex(genesisQC, View.of(1), List.of(nextTxn.getPayload()));
 		final VerifiedVertex proposedVertex = new VerifiedVertex(unverifiedVertex, hasher.hash(unverifiedVertex));
 		Optional<PreparedVertex> nextPrepared = sut.prepare(new LinkedList<>(), proposedVertex);
 
@@ -209,11 +205,11 @@ public class StateComputerLedgerTest {
 		assertThat(nextPrepared.flatMap(x ->
 			accumulatorVerifier.verifyAndGetExtension(
 				ledgerHeader.getAccumulatorState(),
-				ImmutableList.of(nextCommand),
-				hasher::hash,
+				List.of(nextTxn),
+				txn -> txn.getId().asHashCode(),
 				x.getLedgerHeader().getAccumulatorState()
 			))
-		).contains(ImmutableList.of(nextCommand));
+		).contains(List.of(nextTxn));
 	}
 
 	@Test
@@ -237,7 +233,7 @@ public class StateComputerLedgerTest {
 			ledgerHeader,
 			new TimestampedECDSASignatures()
 		);
-		VerifiedCommandsAndProof verified = new VerifiedCommandsAndProof(ImmutableList.of(nextCommand), header);
+		VerifiedTxnsAndProof verified = new VerifiedTxnsAndProof(List.of(nextTxn), header);
 
 		// Act
 		sut.syncEventProcessor().process(verified);
