@@ -17,19 +17,17 @@
 
 package com.radixdlt.statecomputer;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.inject.AbstractModule;
 import com.google.inject.Provides;
 import com.google.inject.Singleton;
-import com.radixdlt.consensus.Command;
+import com.radixdlt.atom.Txn;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.VerifiedVertexStoreState;
 import com.radixdlt.consensus.bft.View;
 import com.radixdlt.counters.SystemCounters;
 import com.radixdlt.ledger.MockPrepared;
 import com.radixdlt.ledger.StateComputerLedger;
-import com.radixdlt.ledger.VerifiedCommandsAndProof;
+import com.radixdlt.ledger.VerifiedTxnsAndProof;
 import com.radixdlt.mempool.MempoolConfig;
 import com.radixdlt.mempool.SimpleMempool;
 import com.radixdlt.mempool.Mempool;
@@ -38,7 +36,9 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 /**
  * Simple Mempool state computer
@@ -48,7 +48,7 @@ public class MockedMempoolStateComputerModule extends AbstractModule {
 
 	@Provides
 	@Singleton
-	private Mempool<Command> mempool(
+	private Mempool<Txn> mempool(
 		MempoolConfig mempoolConfig,
 		SystemCounters systemCounters,
 		Random random
@@ -58,42 +58,39 @@ public class MockedMempoolStateComputerModule extends AbstractModule {
 
 	@Provides
 	@Singleton
-	private StateComputerLedger.StateComputer stateComputer(Mempool<Command> mempool) {
+	private StateComputerLedger.StateComputer stateComputer(Mempool<Txn> mempool) {
 		return new StateComputerLedger.StateComputer() {
 			@Override
-			public void addToMempool(Command command, BFTNode origin) {
+			public void addToMempool(Txn txn, BFTNode origin) {
 				try {
-					mempool.add(command);
+					mempool.add(txn);
 				} catch (MempoolRejectedException e) {
 					log.error(e);
 				}
 			}
 
 			@Override
-			public Command getNextCommandFromMempool(ImmutableList<StateComputerLedger.PreparedCommand> prepared) {
-				final List<Command> commands = mempool.getCommands(1, List.of());
-				return !commands.isEmpty() ? commands.get(0) : null;
+			public List<Txn> getNextTxnsFromMempool(List<StateComputerLedger.PreparedTxn> prepared) {
+				return mempool.getTxns(1, List.of());
 			}
 
 			@Override
 			public StateComputerLedger.StateComputerResult prepare(
-				ImmutableList<StateComputerLedger.PreparedCommand> previous,
-				Command next,
+				List<StateComputerLedger.PreparedTxn> previous,
+				List<Txn> next,
 				long epoch,
 				View view,
 				long timestamp
 			) {
 				return new StateComputerLedger.StateComputerResult(
-					next == null
-						? ImmutableList.of()
-						: ImmutableList.of(new MockPrepared(next)),
-					ImmutableMap.of()
+					next.stream().map(MockPrepared::new).collect(Collectors.toList()),
+					Map.of()
 				);
 			}
 
 			@Override
-			public void commit(VerifiedCommandsAndProof commands, VerifiedVertexStoreState vertexStoreState) {
-				mempool.committed(commands.getCommands());
+			public void commit(VerifiedTxnsAndProof txnsAndProof, VerifiedVertexStoreState vertexStoreState) {
+				mempool.committed(txnsAndProof.getTxns());
 			}
 		};
 	}
