@@ -17,49 +17,49 @@
 
 package com.radixdlt.statecomputer;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.radixdlt.consensus.Command;
+import com.radixdlt.atom.Txn;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.VerifiedVertexStoreState;
 import com.radixdlt.consensus.bft.View;
 import com.radixdlt.ledger.MockPrepared;
 import com.radixdlt.ledger.StateComputerLedger;
 import com.radixdlt.ledger.StateComputerLedger.StateComputer;
-import com.radixdlt.ledger.VerifiedCommandsAndProof;
+import com.radixdlt.ledger.VerifiedTxnsAndProof;
+
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 public final class MockedStateComputer implements StateComputer {
 	public MockedStateComputer() {
 	}
 
 	@Override
-	public void addToMempool(Command command, BFTNode origin) {
+	public void addToMempool(Txn txn, BFTNode origin) {
 		// No-op
 	}
 
 	@Override
-	public Command getNextCommandFromMempool(ImmutableList<StateComputerLedger.PreparedCommand> prepared) {
-		return null;
+	public List<Txn> getNextTxnsFromMempool(List<StateComputerLedger.PreparedTxn> prepared) {
+		return List.of();
 	}
 
 	@Override
 	public StateComputerLedger.StateComputerResult prepare(
-		ImmutableList<StateComputerLedger.PreparedCommand> previous,
-		Command next,
+		List<StateComputerLedger.PreparedTxn> previous,
+		List<Txn> next,
 		long epoch,
 		View view,
 		long timestamp
 	) {
 		return new StateComputerLedger.StateComputerResult(
-			next == null
-				? ImmutableList.of()
-				: ImmutableList.of(new MockPrepared(next)),
-			ImmutableMap.of()
+			next.stream().map(MockPrepared::new).collect(Collectors.toList()),
+			Map.of()
 		);
 	}
 
 	@Override
-	public void commit(VerifiedCommandsAndProof verifiedCommandsAndProof, VerifiedVertexStoreState vertexStoreState) {
+	public void commit(VerifiedTxnsAndProof verifiedTxnsAndProof, VerifiedVertexStoreState vertexStoreState) {
 		// No-op
 	}
 }
